# mcp-kafka

./: README.md  docker-compose.yml  pyproject.toml
mcp_kafka/: __main__.py  cli.py  config.py  create_topic.py  feed_topic.py  history_schema.avsc  kafka_to_redis.py  mcp_api.py  mcp_client.py  mcp_server.py  upload_schema.py
