[project]
name = "kafka-history-mcp"
version = "0.1.0"
description = "Kafka-to-Redis Ingestor with FastMCP API"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=0.4.1",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "fastavro>=1.12.1",
    "typer>=0.24.1",
]

[project.scripts]
mcp-kafka = "mcp_kafka.cli:app"

[tool.uv]
package = true
[dependency-groups]
dev = ["ruff>=0.3.0", "pytest>=8.0.0"]

[tool.ruff]
target-version = "py314"
line-length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_kafka*"]

[tool.setuptools.package-data]
mcp_kafka = ["*.avsc"]
